package/restshellservice/deploy/restshellservice.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: restshellservice
  namespace: ensaas-service
  labels:
    app: restshellservice
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: restshellservice
    spec:
      #imagePullSecrets:
      #- name: harbor-registry-secret
      containers:
        - name: restshellservice
          image: registry.cn-shanghai.aliyuncs.com/advantech-k8s/restshellservice:v1.0.0
          resources:
            requests:
              memory: "20Mi"
              cpu: "10m"
              ephemeral-storage: "100Mi"
            limits:
              memory: "100Mi"
              cpu: "165m"
              ephemeral-storage: "200Mi"
          imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    service.beta.kubernetes.io/azure-load-balancer-internal: "true"
  name: restshellservice
  namespace: ensaas-service
  labels:
    app: restshellservice
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: restshellservice
