package/restshellservice/deploy/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: restshellservice
  namespace: ensaas-service
  annotations:
    kubernetes.io/ingress.class: "nginx"

spec:
  rules:
  - host: api.restshell.master.internal
    http:
      paths:
      - backend:
          serviceName: restshellservice
          servicePort: 80
        path: /
